--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "global-jsdom": "^8.3.0",
     "jsdom": "^18.1.0",
     "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
     "mocha-multi": "^1.1.5"
   }
 }
